force-app/main/default/objects/Lead_Duration__c/Lead_Duration__c.object-meta.xml
<CustomObject>
    <description>An object on leads to track stage duration.</description>
    <label>Lead Duration</label>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Lead Duration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Durations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>