force-app/main/default/objects/Lead_Duration__c/fields/From_Status__c.field-meta.xml
<CustomField>
    <fullName>From_Status__c</fullName>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>