force-app/main/default/objects/Lead_Duration__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <label>Lead Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>