force-app/main/default/objects/Lead_Duration__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Lead Record</description>
    <label>Parent</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Durations</relationshipLabel>
    <relationshipName>Lead_Durations</relationshipName>
    <type>Lookup</type>
</CustomField>