force-app/main/default/objects/Lead_Duration__c/fields/Until__c.field-meta.xml
<CustomField>
    <fullName>Until__c</fullName>
    <label>Until</label>
    <type>DateTime</type>
</CustomField>