force-app/main/default/objects/Lead_Duration__c/listViews/Fordis_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Fordis_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Fordis</label>
    <queue>Fordis</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>