force-app/main/default/objects/Lead_Duration__c/listViews/Government_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Government_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Government</label>
    <queue>Government</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>