force-app/main/default/objects/Lead_Duration__c/listViews/Inside_Sales_Reassignments_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Inside_Sales_Reassignments_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Inside Sales Reassignments</label>
    <queue>Inside_Sales_Reassignments</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>