force-app/main/default/objects/Lead_Duration__c/listViews/InsideSalesLeadQualification_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>InsideSalesLeadQualification_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Inside Sales - Lead Qualification</label>
    <queue>InsideSalesLeadQualification</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>