force-app/main/default/objects/Lead_Duration__c/listViews/Logistics_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Logistics_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Logistics</label>
    <queue>Logistics</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>