force-app/main/default/objects/Lead_Duration__c/listViews/Marketing_Engaged_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Marketing_Engaged_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Engaged</label>
    <queue>Marketing_Engaged</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>