force-app/main/default/objects/Lead_Duration__c/listViews/Marketing_Owned_Dead_Leads_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Marketing_Owned_Dead_Leads_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Owned Dead Leads</label>
    <queue>Marketing_Owned_Dead_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>