force-app/main/default/objects/Lead_Duration__c/listViews/Pkg_Design_And_Test_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Pkg_Design_And_Test_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Pkg Design &amp; Test</label>
    <queue>Pkg_Design_And_Test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>