force-app/main/default/objects/Lead_Duration__c/listViews/PKG_Equipment_Inside_Sales_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>PKG_Equipment_Inside_Sales_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>PKG Equipment Inside Sales</label>
    <queue>PKG_Equipment_Inside_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>