force-app/main/default/objects/Lead_Duration__c/listViews/Service_Tech_Queue_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>Service_Tech_Queue_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Tech Queue</label>
    <queue>Service_Tech_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>