force-app/main/default/objects/Lead_Duration__c/listViews/TSB_East_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>TSB_East_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>TSB East</label>
    <queue>TSB_East</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>