force-app/main/default/objects/Lead_Duration__c/listViews/TSB_West_Lead_Duration.listView-meta.xml
<ListView>
    <fullName>TSB_West_Lead_Duration</fullName>
    <filterScope>Queue</filterScope>
    <label>TSB West</label>
    <queue>TSB_West</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>